--- a/ansible/roles/arch_devops/tasks/main.yaml
+++ b/ansible/roles/arch_devops/tasks/main.yaml
@@ -163,22 +163,12 @@
   when: aws_creds_available
 
 ## CONFIGURE ANSIBLE
-- name: Create the Ansible config directory
-  become: true
-  become_user: "{{ ansible_user }}"
-  ansible.builtin.file:
-    path: "/home/{{ ansible_user }}/.config/ansible"
-    state: directory
-    mode: "0755"
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-
 - name: Write the Ansible config file
   become: true
   become_user: "{{ ansible_user }}"
   ansible.builtin.template:
     src: ansible.cfg.j2
-    dest: "/home/{{ ansible_user }}/.config/ansible/ansible.cfg"
+    dest: "/home/{{ ansible_user }}/.ansible.cfg"
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
 
