--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -5,10 +5,11 @@
   become: true
 
   roles:
-    - { role: ubuntu_base,       tags: ["ubuntu_base"] }
-    - { role: ubuntu_hardening,  tags: ["ubuntu_hardening"] }
-    - { role: ubuntu_shell,      tags: ["ubuntu_shell"] }
-    - { role: common_backup_runner,   tags: ["ubuntu_backup"] }
+    - { role: ubuntu_base,              tags: ["ubuntu_base"] }
+    - { role: ubuntu_hardening,         tags: ["ubuntu_hardening"] }
+    - { role: ubuntu_shell,             tags: ["ubuntu_shell"] }
+    - { role: common_install_ssh_keys,  tags: ["arch_ssh_keys"] }
+    - { role: common_backup_runner,     tags: ["ubuntu_backup"] }
     # - { role: arch_services,   tags: ["arch_services"] }
     # - { role: arch_monitoring, tags: ["arch_monitoring"] }
     # - { role: dotfiles,        tags: ["ubuntu_dotfiles"] }
