--- a/ansible/playbooks/l3-converge-arch.yml
+++ b/ansible/playbooks/l3-converge-arch.yml
@@ -1,42 +1,37 @@
 ---
-- name: Baseline Arch convergence
-  hosts: arch_devops:arch_tinker
+#### GENERAL OS CONVERGENCE
+
+- name: Arch OS Convergence
+  hosts: all
   gather_facts: true
   become: true
 
   roles:
-    - { role: arch_base,                tags: ["arch_base"] }
-    - { role: arch_hardening,           tags: ["arch_hardening"] }
-    - { role: arch_services,            tags: ["arch_services"] }
-    - { role: arch_shell,               tags: ["arch_dotfiles"] }
-    - { role: arch_aur,                 tags: ["arch_aur"], when: arch_aur_enabled | default(false) }
-    - { role: arch_docker_compose,      tags: ["arch_docker"] }
-    - { role: common_install_ssh_keys,  tags: ["arch_ssh_keys"] }
-    - { role: common_backup_runner,     tags: ["arch_backup"] }
+    ## OS-SPECIFIC; DEFAULT ON
+    - { role: arch_base,                  tags: ["base"],             when: is_base_enabled | default(true) }
+    - { role: arch_hardening,             tags: ["harden"],           when: is_harden_enabled | default(true) }
+    - { role: arch_services,              tags: ["services"],         when: is_services_enabled | default(true) }
+    - { role: arch_shell,                 tags: ["shell"],            when: is_shell_enabled | default(true) }
+    ## OS-SPECIFIC; DEFAULT OFF
+    - { role: arch_aur,                   tags: ["aur"],              when: is_aur_enabled | default(false) }
+    - { role: arch_desktop,               tags: ["desktop"],          when: is_desktop_enabled | default(false)}
+    - { role: arch_docker_compose,        tags: ["docker"],           when: is_docker_enabled | default(false) }
+    - { role: arch_devops,                tags: ["devops"],           when: is_devops_enabled | default(false)}
+    ## CROSS-OS; DEFAULT OFF
+    - { role: common_install_ssh_keys,    tags: ["ssh_keys"],         when: is_ssh_keys_enabled | default(false) }
+    - { role: common_backup_runner,       tags: ["backup"],           when: is_backup_enabled | default(false) }
+    - { role: common_s3_local_mirror,     tags: ["s3_mirror"],        when: is_s3_mirror_enabled | default(false) }
+    - { role: common_postgres_db_backup,  tags: ["db_backup"],        when: is_db_backup_enabled | default(false) }
+    - { role: common_node_exporter,       tags: ["node_exporter"],    when: is_node_exporter_enabled | default(false) }
 
-- name: Arch DevOps convergence
-  hosts: arch_devops
-  gather_facts: true
-  become: true
+#### DOCKER MONITORING CONVERGENCE
 
-  roles:
-    - { role: arch_devops,     tags: ["arch_devops"] }
-    - { role: common_s3_local_mirror,   tags: ["arch_s3"] }
-    - { role: common_postgres_db_backup,   tags: ["arch_db_backup"], when: postgres_db_backup_enabled | default(false) }
-
-- name: Arch Tinker convergence
-  hosts: arch_tinker
-  gather_facts: true
-  become: true
-
-  roles:
-    - { role: arch_desktop,    when: arch_desktop_enabled | default(false), tags: ["arch_desktop"] }
-
-- name: Docker Compose monitoring services
+## TODO - MOVE TO EXTERNAL PLAYBOOK FOR UBUNTU RE-USE
+- name: Monitoring Docker Services
   hosts: docker_compose_monitoring
   become: yes
   gather_facts: yes
-  tags: [docker_compose_monitoring]
+  tags: [docker_monitoring]
 
   roles:
     - role: common_docker_compose_services
