--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -1,37 +1,24 @@
 ---
-- name: Baseline Ubuntu convergence
-  hosts: ubuntu_legacy:ubuntu_openvpn:ubuntu_tinker
+#### GENERAL OS CONVERGENCE
+- name: Ubuntu OS Convergence
+  hosts: all
   gather_facts: true
   become: true
 
   roles:
-    - { role: ubuntu_base,              tags: ["ubuntu_base"] }
-    - { role: ubuntu_hardening,         tags: ["ubuntu_hardening"] }
-    - { role: ubuntu_shell,             tags: ["ubuntu_shell"] }
-    - { role: common_install_ssh_keys,  tags: ["arch_ssh_keys"] }
-    - { role: common_backup_runner,     tags: ["ubuntu_backup"] }
-    # - { role: arch_services,   tags: ["arch_services"] }
-    # - { role: arch_monitoring, tags: ["arch_monitoring"] }
-    # - { role: dotfiles,        tags: ["ubuntu_dotfiles"] }
-    # - { role: arch_aur,        when: arch_aur_enabled | default(false), tags: ["arch_aur"] }
+    ## OS-SPECIFIC; DEFAULT ON
+    - { role: ubuntu_base,                  tags: ["base"],             when: is_base_enabled | default(true) }
+    - { role: ubuntu_hardening,             tags: ["harden"],           when: is_harden_enabled | default(true) }
+    - { role: ubuntu_shell,                 tags: ["shell"],            when: is_shell_enabled | default(true) }
+    ## OS-SPECIFIC; DEFAULT OFF
+    - { role: ubuntu_docker_compose,        tags: ["docker"],           when: is_docker_enabled | default(false) }
+    - { role: ubuntu_openvpn,               tags: ["openvpn"],          when: is_openvpn_enabled | default(false) }
+    ## CROSS-OS; DEFAULT OFF
+    - { role: common_install_ssh_keys,      tags: ["ssh_keys"],         when: is_ssh_keys_enabled | default(false) }
+    - { role: common_backup_runner,         tags: ["backup"],           when: is_backup_enabled | default(false) }
+    - { role: common_s3_local_mirror,       tags: ["s3_mirror"],        when: is_s3_mirror_enabled | default(false) }
+    - { role: common_postgres_db_backup,    tags: ["db_backup"],        when: is_db_backup_enabled | default(false) }
+    - { role: common_node_exporter,         tags: ["node_exporter"],    when: is_node_exporter_enabled | default(false) }
 
-- name: Ubuntu Tinker convergence
-  hosts: ubuntu_tinker
-  gather_facts: true
-  become: true
-
-  roles:
-    - { role: ubuntu_docker_compose,        tags: ["ubuntu_docker"] }
-
-- name: Docker Compose monitoring services
-  hosts: docker_compose_monitoring
-  become: yes
-  gather_facts: yes
-  tags: [docker_compose_monitoring]
-
-  roles:
-    - role: common_docker_compose_services
-      vars:
-        compose_app_name: monitoring
-        compose_source_type: template
-        compose_template_src: "templates/docker-compose/monitoring.compose.yaml.j2"
+#### DOCKER MONITORING CONVERGENCE
+- import_playbook: l3-converge-docker-monitoring.yml
