--- a/ansible/roles/ubuntu_openvpn/tasks/main.yaml
+++ b/ansible/roles/ubuntu_openvpn/tasks/main.yaml
@@ -33,6 +33,21 @@
     group: root
     mode: '0600'
 
+- name: ensure ipv4 forwarding is enabled at runtime
+  ansible.builtin.sysctl:
+    name: net.ipv4.ip_forward
+    value: "1"
+    state: present
+    reload: yes
+
+- name: ensure ipv4 forwarding is configured persistently
+  ansible.builtin.copy:
+    dest: /etc/sysctl.d/99-ip-forward.conf
+    content: "net.ipv4.ip_forward = 1\n"
+    owner: root
+    group: root
+    mode: "0644"
+
 - name: enable and start openvpn client service
   systemd:
     name: "openvpn-client@expressvpn.service"
