--- a/ansible/playbooks/l3-converge-docker-media-acquisition.yml
+++ b/ansible/playbooks/l3-converge-docker-media-acquisition.yml
@@ -36,6 +36,11 @@
             uid: 1000
             gid: 1000
             mode: "0755"
+          - path: "/etc/prowlarr"
+            create: true
+            uid: 1000
+            gid: 1000
+            mode: "0755"
           - path: "/var/lib/jackett/downloads"
             create: true
             uid: 1000
