--- a/ansible/roles/common_docker_compose_services/files/docker-compose/media_acquisition.compose.yaml
+++ b/ansible/roles/common_docker_compose_services/files/docker-compose/media_acquisition.compose.yaml
@@ -79,5 +79,18 @@ services:
       - /var/lib/transmission/watch:/watch
       - /mnt/media-acquisition/downloads:/downloads
 
+  prowlarr:
+    image: lscr.io/linuxserver/prowlarr:latest
+    container_name: prowlarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
+    volumes:
+      - /etc/prowlarr:/config
+    ports:
+      - 9696:9696
+    restart: unless-stopped
+
 networks:
   media: {}
