--- a/ansible/playbooks/l3-converge-docker-monitoring.yml
+++ b/ansible/playbooks/l3-converge-docker-monitoring.yml
@@ -1,5 +1,5 @@
 - name: Monitoring Docker Services
-  hosts: docker_compose_monitoring
+  hosts: "{{ converge_group }}:&docker_compose_monitoring"
   become: yes
   gather_facts: yes
   tags: [docker_monitoring]
@@ -10,3 +10,4 @@
         compose_app_name: monitoring
         compose_source_type: template
         compose_template_src: "templates/docker-compose/monitoring.compose.yaml.j2"
+
