--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -1,54 +1,4 @@
 ---
-#### GENERAL OS CONVERGENCE
-- name: Ubuntu OS Convergence
-  hosts: ubuntu
-  gather_facts: true
-  become: true
-
-  roles:
-    ## OS-SPECIFIC; DEFAULT ON
-    - { role: ubuntu_base,                  tags: ["base"],             when: is_base_enabled | default(true) }
-    - { role: ubuntu_hardening,             tags: ["harden"],           when: is_harden_enabled | default(true) }
-    - { role: ubuntu_shell,                 tags: ["shell"],            when: is_shell_enabled | default(true) }
-    ## OS-SPECIFIC; DEFAULT OFF
-    - { role: ubuntu_docker_compose,        tags: ["docker"],           when: is_docker_enabled | default(false) }
-    - { role: ubuntu_openvpn,               tags: ["openvpn"],          when: is_openvpn_enabled | default(false) }
-    ## CROSS-OS; DEFAULT OFF
-    #### order for these 3 matters - install SSH keys, restore first, then schedule backups
-    - { role: common_install_ssh_keys,      tags: ["ssh_keys"],         when: is_ssh_keys_enabled | default(false) }
-    - { role: common_backup_restore,        tags: ["restore"],          when: is_restore_enabled | default(false) }
-    - { role: common_backup_runner,         tags: ["backup"],           when: is_backup_enabled | default(false) }
-    - { role: common_s3_local_mirror,       tags: ["s3_mirror"],        when: is_s3_mirror_enabled | default(false) }
-    - { role: common_postgres_db_backup,    tags: ["db_backup"],        when: is_db_backup_enabled | default(false) }
-    - { role: common_node_exporter,         tags: ["node_exporter"],    when: is_node_exporter_enabled | default(false) }
-
-#### DOCKER MONITORING CONVERGENCE
+- import_playbook: l3-converge-ubuntu-all.yml
 - import_playbook: l3-converge-docker-monitoring.yml
-
-#### MEDIA ACQUISITION CONVERGENCE
-- import_playbook: l3-converge-docker-media-acquisition.yml
-
-#### IT TOOLS CONVERGENCE
-- import_playbook: l3-converge-docker-it-tools.yml
-
-#### NO GEEKS BREWING CONVERGENCE
-- import_playbook: l3-converge-docker-no-geeks-brewing.yml
-
-#### MEMOS CONVERGENCE
-- import_playbook: l3-converge-docker-memos.yml
-
-#### CLOUDFLARE CONVERGENCE
-- import_playbook: l3-converge-docker-cloudflare.yml
-
-#### TWINGATE CONVERGENCE
-- import_playbook: l3-converge-docker-twingate.yml
-
-#### PI-HOLE CONVERGENCE
-#- import_playbook: l3-converge-docker-pihole.yml
-
-#### GATUS CONVERGENCE
-#- import_playbook: l3-converge-docker-gatus.yml
-
-#### TRAEFIK CONVERGENCE
-- import_playbook: l3-converge-docker-traefik.yml
 
