--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -1,4 +1,7 @@
 ---
 - import_playbook: l3-converge-ubuntu-all.yml
+- import_playbook: l3-converge-docker-compose.yml
 - import_playbook: l3-converge-docker-monitoring.yml
+- import_playbook: l3-converge-ubuntu-openvpn.yml
+
 
