--- a/ansible/playbooks/l3-converge-docker-it-tools.yml
+++ b/ansible/playbooks/l3-converge-docker-it-tools.yml
@@ -1,6 +1,6 @@
 ---
 - name: IT Tools Docker Services
-  hosts: docker_compose_it_tools
+  hosts: "{{ converge_group }}:&docker_compose_it_tools"
   become: yes
   gather_facts: yes
   tags: [docker_it_tools]
