--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -17,6 +17,7 @@ all:
       ansible_host: 192.168.86.227
     patricia:
       ansible_host: 192.168.86.224
+      gatus_slug: "(Ubuntu Docker/Media)"
     polaris:
       ansible_host: 192.168.86.101
     procyon:
