--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -5,7 +5,7 @@
 - import_playbook: l3-converge-docker-cloudflare.yml
 - import_playbook: l3-converge-docker-twingate.yml
 - import_playbook: l3-converge-docker-gatus.yml
-# - import_playbook: l3-converge-docker-pihole.yml
+- import_playbook: l3-converge-docker-pihole.yml
 - import_playbook: l3-converge-docker-traefik.yml
 - import_playbook: l3-converge-docker-it-tools.yml
 - import_playbook: l3-converge-docker-no-geeks-brewing.yml
