arch devops persona

--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -74,6 +74,8 @@ all:
         arch:
           children:
             arch_devops:
+              hosts:
+                langolier:
             arch_tinker:
               hosts:
                 cujo:
