--- a/ansible/inventory/group_vars/docker_compose_pihole.yaml
+++ b/ansible/inventory/group_vars/docker_compose_pihole.yaml
@@ -26,7 +26,7 @@ pihole_cname_records:
     target: "hosts.allanshomelab.com"
   - alias: "gilead.hosts.allanshomelab.com"
     target: "hosts.allanshomelab.com"
-  - alias: "polaris.hosts.allanshomelab.com"
+  - alias: "shardik.hosts.allanshomelab.com"
     target: "hosts.allanshomelab.com"
   - alias: "procyon.hosts.allanshomelab.com"
     target: "hosts.allanshomelab.com"
