--- a/ansible/roles/common_docker_compose_services/tasks/main.yaml
+++ b/ansible/roles/common_docker_compose_services/tasks/main.yaml
@@ -183,8 +183,15 @@
   notify: restart compose stack
 
 # --- Deploy ---
-- name: Ensure stack is present
+- name: Ensure stack is present (non-Arch)
   community.docker.docker_compose_v2:
     project_src: "{{ compose_project_dir }}"
     state: present
     remove_orphans: true
+  when: ansible_facts['os_family'] != 'Archlinux'
+
+- name: Ensure stack is present (Arch)
+  ansible.builtin.command: docker compose up -d --remove-orphans
+  args:
+    chdir: "{{ compose_project_dir }}"
+  when: ansible_facts['os_family'] == 'Archlinux'
