ubuntu misc persona

--- a/ansible/inventory/group_vars/ubuntu_misc.yaml
+++ b/ansible/inventory/group_vars/ubuntu_misc.yaml
@@ -2,7 +2,7 @@ is_backup_enabled: true
 backup_runner_cron_hour: "*"
 backup_runner_user: "allan"
 backup_runner_remote_host: "{{ default_remote_nas_ip }}"
-is_restore_enabled": true,
+is_restore_enabled: true
 backup_restore_owner: "lab"
 backup_restore_group: "lab"
 is_ssh_keys_enabled: true
@@ -10,4 +10,3 @@ ssh_keys_install_private_for_ansible_user: false
 ssh_keys_install_public_for_ansible_user: false
 ssh_keys_install_private_for_root: true
 ssh_keys_install_public_for_root: true
-
