--- a/ansible/inventory/host_vars/misery.yaml
+++ b/ansible/inventory/host_vars/misery.yaml
@@ -2,3 +2,27 @@ backup_runner_cron_hour: "*"
 backup_runner_cron_minute: "35"
 backup_runner_healthchecks_url: "https://hc-ping.com/700f0972-2de8-40af-8561-703d0ef7910d"
 backup_runner_healthchecks_status: "https://healthchecks.io/b/2/9f976a0d-58e9-4093-a41c-ca0e40981d36.json"
+
+"backup_runner_volumes": [
+  { 
+    src: "/srv/plex/config",
+    dest: "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/plex/config" 
+  },
+  { 
+    src: "/etc/tautulli",
+    dest: "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/tautulli/config" 
+  },
+  { 
+    src: "/srv/jellyfin/config",
+    dest: "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/jellyfin/config" 
+  },
+  { 
+    src: "/srv/immich/postgres",
+    dest: "{{ backup_runner_user }}@{{ backup_runner_remote_host }}:{{ backup_runner_remote_base_path }}/immich/postgres-volume" 
+  }
+  # { 
+  #   src: "{{ postgres_db_backup_dir }}",
+  #   dest: "/immich/db-dumps" 
+  # }
+]
+
