--- a/ansible/playbooks/l3-converge-ubuntu.yml
+++ b/ansible/playbooks/l3-converge-ubuntu.yml
@@ -1,6 +1,8 @@
 ---
 - import_playbook: l3-converge-ubuntu-all.yml
+
 - import_playbook: l3-converge-ubuntu-docker-compose.yml
+
 - import_playbook: l3-converge-docker-monitoring.yml
 - import_playbook: l3-converge-docker-cloudflare.yml
 - import_playbook: l3-converge-docker-twingate.yml
@@ -12,5 +14,10 @@
 - import_playbook: l3-converge-docker-memos.yml
 - import_playbook: l3-converge-docker-media-acquisition.yml
 - import_playbook: l3-converge-docker-gatus.yml
+- import_playbook: l3-converge-docker-plex.yml
+- import_playbook: l3-converge-docker-tautulli.yml
+- import_playbook: l3-converge-docker-jellyfin.yml
+- import_playbook: l3-converge-docker-immich.yml
+
 - import_playbook: l3-converge-ubuntu-openvpn.yml
 
