--- a/ansible/roles/common_docker_compose_services/handlers/main.yaml
+++ b/ansible/roles/common_docker_compose_services/handlers/main.yaml
@@ -1,5 +1,6 @@
 ---
-- name: restart compose stack
+# Preferred path (works on Ubuntu, etc.)
+- name: restart compose stack (module)
   listen: restart compose stack
   community.docker.docker_compose_v2:
     project_src: "{{ compose_project_dir }}"
@@ -7,3 +8,15 @@
     recreate: "{{ compose_pull_recreate | ternary('always','auto') }}"
     remove_orphans: true
     state: present
+  when: ansible_facts['os_family'] != 'Archlinux'
+
+# Arch fallback
+- name: restart compose stack (CLI fallback)
+  listen: restart compose stack
+  ansible.builtin.command: >
+    docker compose up -d --remove-orphans
+    {{ compose_pull_recreate | ternary('--force-recreate', '') }}
+  args:
+    chdir: "{{ compose_project_dir }}"
+  when: ansible_facts['os_family'] == 'Archlinux'
+
